--- a/view/frontend/templates/script/sentry.phtml
+++ b/view/frontend/templates/script/sentry.phtml
@@ -5,17 +5,30 @@
 if (!$block->canUseScriptTag($block->getNameInLayout())) {
     return;
 }
+
+$bundleFile = 'bundle.min.js';
+if ($block->isTracingEnabled()) {
+    $bundleFile = 'bundle.tracing.min.js';
+}
+
+$remoteFile = sprintf('https://browser.sentry-cdn.com/%s/%s', $block->escapeHtmlAttr($block->getJsSdkVersion()), $bundleFile);
 ?>
 
 <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise" crossorigin></script>
-<script src="https://browser.sentry-cdn.com/<?= $block->escapeHtmlAttr($block->getJsSdkVersion()) ?>/bundle.min.js"
-        crossorigin="anonymous">
-</script>
+<script src="<?= /** @noEscape */$remoteFile ?>" crossorigin="anonymous"></script>
 <script>
     Sentry.init({
         dsn: '<?= $block->escapeUrl(trim($block->getDSN())) ?>',
         release: '<?= $block->escapeHtml(trim($block->getVersion())) ?>',
         environment: '<?= $block->escapeHtml(trim($block->getEnvironment())) ?>',
+        integrations: [
+            <?php if ($block->isTracingEnabled()) : ?>
+                new Sentry.BrowserTracing(),
+            <?php endif ?>
+        ],
+        <?php if ($block->isTracingEnabled()) : ?>
+        tracesSampleRate: <?=$block->getTracingSampleRate()?>,
+        <?php endif ?>
         <?php if ($block->stripStaticContentVersion() || $block->stripStoreCode()): ?>
         beforeSend: function(event) {
             event.exception.values.map(function (value) {
