--- a/view/frontend/templates/script/sentry.phtml
+++ b/view/frontend/templates/script/sentry.phtml
@@ -29,6 +29,7 @@ $remoteFile = sprintf('https://browser.sentry-cdn.com/%s/%s', $block->escapeHtml
         <?php if ($block->isTracingEnabled()) : ?>
         tracesSampleRate: <?=$block->getTracingSampleRate()?>,
         <?php endif ?>
+        ignoreErrors: <?= /** @noEscape */ $block->getIgnoreJsErrors() ?>,
         <?php if ($block->stripStaticContentVersion() || $block->stripStoreCode()): ?>
         beforeSend: function(event) {
             event.exception.values.map(function (value) {
