--- a/view/frontend/templates/script/sentry.phtml
+++ b/view/frontend/templates/script/sentry.phtml
@@ -17,48 +17,68 @@ $remoteFile = sprintf('https://browser.sentry-cdn.com/%s/%s', $block->escapeHtml
 <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise" crossorigin></script>
 <script src="<?= /** @noEscape */$remoteFile ?>" crossorigin="anonymous"></script>
 <script>
-    Sentry.init({
-        dsn: '<?= $block->escapeUrl(trim($block->getDSN())) ?>',
-        release: '<?= $block->escapeHtml(trim($block->getVersion())) ?>',
-        environment: '<?= $block->escapeHtml(trim($block->getEnvironment())) ?>',
-        integrations: [
-            <?php if ($block->isTracingEnabled()) : ?>
-                new Sentry.BrowserTracing(),
-            <?php endif ?>
-        ],
-        <?php if ($block->isTracingEnabled()) : ?>
-        tracesSampleRate: <?=$block->getTracingSampleRate()?>,
-        <?php endif ?>
-        ignoreErrors: <?= /** @noEscape */ $block->getIgnoreJsErrors() ?>,
-        <?php if ($block->stripStaticContentVersion() || $block->stripStoreCode()): ?>
-        beforeSend: function(event) {
-            event.exception.values.map(function (value) {
-                if (value.stacktrace === undefined || ! value.stacktrace) {
-                    return value;
-                }
-
-                <?php if ($block->stripStaticContentVersion()): ?>
-                value.stacktrace.frames.map(function (frame) {
-                    frame.filename = frame.filename.replace(/version[0-9]{10}\//, '');
-                    return frame;
-                });
-                <?php endif; ?>
-
-                <?php if ($block->stripStoreCode()): ?>
-                value.stacktrace.frames.map(function (frame) {
-                    <?php // phpcs:disable Generic.Files.LineLength ?>
-                    frame.filename = frame.filename.replace('/<?= $block->escapeHtml($block->getStoreCode()); ?>/', '/');
-                    <?php // phpcs:enable Generic.Files.LineLength ?>
-                    return frame;
-                });
-                <?php endif; ?>
-
-                return value;
+    (function () {
+        <?php if ($block->isPreventReportingAfterUnload()): ?>
+            let preventSentryReporting = false;
+            window.addEventListener('beforeunload', () => {
+                preventSentryReporting = true;
             });
-            return event;
-        }
-    <?php endif; ?>
-    });
+
+            if (preventSentryReporting) {
+                return;
+            }
+        <?php endif ?>
+
+        Sentry.init({
+            dsn: '<?= $block->escapeUrl(trim($block->getDSN())) ?>',
+            release: '<?= $block->escapeHtml(trim($block->getVersion())) ?>',
+            environment: '<?= $block->escapeHtml(trim($block->getEnvironment())) ?>',
+            integrations: [
+                <?php if ($block->isTracingEnabled()): ?>
+                new Sentry.BrowserTracing(),
+                <?php endif ?>
+            ],
+            <?php if ($block->isTracingEnabled()): ?>
+            tracesSampleRate: <?=$block->getTracingSampleRate()?>,
+            <?php endif ?>
+            ignoreErrors: <?= /** @noEscape */ $block->getIgnoreJsErrors() ?>,
+            beforeSend: function (event) {
+                <?php if ($block->isPreventReportingAfterUnload()): ?>
+                    if (preventSentryReporting) {
+                        return null;
+                    }
+                <?php endif ?>
+
+                <?php if ($block->stripStaticContentVersion() || $block->stripStoreCode()): ?>
+                    event.exception.values.map(function (value) {
+                        if (value.stacktrace === undefined || !value.stacktrace) {
+                            return value;
+                        }
+
+                        <?php if ($block->stripStaticContentVersion()): ?>
+                        value.stacktrace.frames.map(function (frame) {
+                            frame.filename = frame.filename.replace(/version[0-9]{10}\//, '');
+                            return frame;
+                        });
+                        <?php endif; ?>
+
+                        <?php if ($block->stripStoreCode()): ?>
+                        value.stacktrace.frames.map(function (frame) {
+                            <?php // phpcs:disable Generic.Files.LineLength ?>
+                            frame.filename = frame.filename.replace('/<?= $block->escapeHtml($block->getStoreCode()); ?>/', '/');
+                            <?php // phpcs:enable Generic.Files.LineLength ?>
+                            return frame;
+                        });
+                        <?php endif; ?>
+
+                        return value;
+                    });
+                <?php endif; ?>
+
+                return event;
+            }
+        });
+    })();
 </script>
 
 <?php if ($block->useLogRocket()): ?>
